# c-challenge

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
assets/: .gitkeep  surprise.txt  welcome.txt
src/: app.h  classic_style.h  day.c  day.h  dyn_array.h  main.c  spooky_style.h  style.h  ui.c  ui.h  util.c  util.h
